# melange

./: .gitignore  Cargo.toml
agent-docs/: codebase.md
agent-docs/plans/: database_foundation_1773808818_implementation.md  database_foundation_1773808818_progress.md  database_foundation_1773808818_requirements.md  loading_indicator_1773810277_implementation.md  loading_indicator_1773810277_progress.md  loading_indicator_1773810277_requirements.md  opencode_startup_check_1773811148_implementation.md  opencode_startup_check_1773811148_progress.md  opencode_startup_check_1773811148_requirements.md  project_init_1773807022_implementation.md  project_init_1773807022_progress.md  project_init_1773807022_requirements.md  project_init_1773807022_state.json
migrations/core/: 20260317000000_init.sql  20260317000001_create_projects.sql  20260317000002_add_project_fields.sql
migrations/project/: 20260317000000_init.sql
src/: app.rs  main.rs
src/app/: service.rs
src/db/: mod.rs
src/kernel/: mod.rs
src/kernel/app_bar/: mod.rs
src/kernel/loading/: domain.rs  mod.rs  ui.rs
src/kernel/opencode/: domain.rs  mod.rs
src/modules/: mod.rs
src/modules/project/: domain.rs  message.rs  mod.rs  repository.rs  service.rs
src/ui/: app_bar.rs  mod.rs  opencode.rs  project.rs
src/ui/app/: mod.rs  state.rs  update.rs  view.rs
