[package]
name = "melange"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dirs = "5"
rfd = "0.15"
